fix(cache): Add version cache-buster to logo URLs for reliable updates

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -27,7 +27,7 @@
     <div class="auth-screen" id="authScreen">
         <div class="auth-card">
             <div class="auth-header">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="auth-logo">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="auth-logo">
                 <h1>QScrap Admin</h1>
                 <p>Platform Management Console</p>
             </div>
@@ -55,7 +55,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo">
                 <h2>QScrap</h2>
                 <span class="admin-badge">ADMIN</span>
             </div>
