--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -332,7 +332,7 @@
     <div class="login-container" id="loginScreen">
         <div class="login-card">
             <div class="login-logo">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="auth-logo-img">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="auth-logo-img">
                 <h1>QScrap</h1>
                 <p>Garage Partner Portal</p>
             </div>
@@ -453,7 +453,7 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo-img">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
                 <h2 class="sidebar-brand">QScrap</h2>
                 <span class="partner-badge">PARTNER</span>
             </div>
