--- a/public/terms.html
+++ b/public/terms.html
@@ -459,7 +459,7 @@
     <nav class="nav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
                 <span class="nav-logo-text">QScrap</span>
             </a>
             <a href="/" class="nav-back">
