--- a/public/about.html
+++ b/public/about.html
@@ -796,7 +796,7 @@
     <nav class="nav" id="mainNav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
                 <span class="nav-logo-text">QScrap</span>
             </a>
             <div class="nav-links">
@@ -1029,7 +1029,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="/assets/images/qscrap-logo.png" alt="QScrap">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap">
                 <span>QScrap</span>
             </div>
             <div class="footer-links">
