--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -47,7 +47,7 @@
     <div class="login-screen" id="loginScreen">
         <div class="login-card">
             <div class="login-header">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="login-logo">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Finance Center</h1>
                 <p class="login-subtitle">Payout & Revenue Management</p>
             </div>
@@ -75,7 +75,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo-img">
+                    <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
                     <div>
                         <div class="logo-text">QScrap</div>
                         <div class="logo-subtitle">Finance</div>
