--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -33,7 +33,7 @@
     <div class="login-screen" id="loginScreen">
         <div class="login-card">
             <div class="login-header">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="login-logo">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Operations Center</h1>
                 <p class="login-subtitle">QScrap Internal Dashboard</p>
             </div>
@@ -63,7 +63,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo-img">
+                    <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
                     <div>
                         <div class="logo-text">QScrap</div>
                         <div class="logo-subtitle">Operations</div>
