--- a/public/partners.html
+++ b/public/partners.html
@@ -1269,7 +1269,7 @@
     <nav class="nav" id="mainNav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
                 <span class="nav-logo-text">QScrap</span>
             </a>
             <div class="nav-links-group">
@@ -1713,7 +1713,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="/assets/images/qscrap-logo.png" alt="QScrap">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap">
                 <span>QScrap</span>
             </div>
             <div class="footer-links">
