--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -787,7 +787,7 @@
     <div class="login-screen" id="loginScreen">
         <div class="login-card">
             <div class="login-header">
-                <img src="assets/images/qscrap-logo.png" alt="QScrap" class="login-logo">
+                <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Support Hub</h1>
                 <p class="login-subtitle">QScrap Customer Resolution</p>
             </div>
@@ -817,7 +817,7 @@
         <aside class="sidebar sidebar-compact">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="assets/images/qscrap-logo.png" alt="QScrap" class="sidebar-logo-img">
+                    <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
                     <div>
                         <div class="logo-text">QScrap</div>
                         <div class="logo-subtitle">Support</div>
