--- a/public/website.html
+++ b/public/website.html
@@ -71,7 +71,7 @@
     <nav class="nav" id="mainNav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
                 <span class="nav-logo-text">QScrap</span>
             </a>
             
@@ -443,7 +443,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="/assets/images/qscrap-logo.png" alt="QScrap Logo" style="filter: brightness(0) invert(1);">
+                    <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo" style="filter: brightness(0) invert(1);">
                     <p>Qatar's leading automotive parts marketplace. Connecting buyers with verified garages for quality parts delivered to your door.</p>
                     <div class="footer-social">
                         <a href="https://facebook.com/qscrapqa" aria-label="Facebook" target="_blank" rel="noopener">
