--- a/public/about.html
+++ b/public/about.html
@@ -155,6 +155,11 @@
             height: 140px;
         }
 
+        .nav-logo:hover img {
+            transform: translateY(-4px) scale(1.05);
+            filter: drop-shadow(0 16px 40px rgba(141, 27, 61, 0.35));
+        }
+
         .nav-logo-text {
             font-size: 24px;
             font-weight: 800;
