fix: Remove duplicate QScrap text from all footers (logo already contains it) - VVVIP standardization

--- a/public/about.html
+++ b/public/about.html
@@ -1035,7 +1035,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap">
-                <span>QScrap</span>
+                
             </div>
             <div class="footer-links">
                 <a href="/">Home</a>
@@ -1045,7 +1045,7 @@
         </div>
         <div class="footer-bottom">
             <p class="footer-legal">QScrap Services & Trading L.L.C | CR: 155892 | P.O. Box 32544, Doha, Qatar</p>
-            <p class="footer-copyright">© 2026 QScrap. All rights reserved.</p>
+            <p class="footer-copyright">© 2026 All rights reserved.</p>
         </div>
     </footer>
 
