--- a/public/index.html
+++ b/public/index.html
@@ -1507,7 +1507,7 @@
             </div>
             <div class="footer-bottom">
                 <p class="footer-legal">QScrap Services & Trading L.L.C | CR: 155892 | P.O. Box 32544, Doha, Qatar</p>
-                <p class="footer-copyright">© 2026 QScrap. All rights reserved.</p>
+                <p class="footer-copyright">© 2026 All rights reserved.</p>
             </div>
         </div>
     </footer>
