--- a/public/partners.html
+++ b/public/partners.html
@@ -1735,7 +1735,7 @@
         <div class="footer-bottom">
             <p class="footer-legal">QScrap Services & Trading L.L.C | كيوسكراب للخدمات والتجارة ذ.م.م</p>
             <p class="footer-legal">CR: 155892 | State of Qatar</p>
-            <p class="footer-copyright">© 2026 QScrap. All rights reserved.</p>
+            <p class="footer-copyright">© 2026 All rights reserved.</p>
         </div>
     </footer>
 
