--- a/public/privacy.html
+++ b/public/privacy.html
@@ -845,7 +845,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
+        <p>© 2026 Services & Trading L.L.C. All rights reserved.</p>
         <p style="margin-top: 8px;">Compliant with Google Play Developer Program Policies and Qatar's Personal Data
             Protection Law.</p>
         <p style="margin-top: 12px;"><a href="/">Back to QScrap Home</a> • <a href="/terms.html">Terms of Service</a>
