--- a/public/terms.html
+++ b/public/terms.html
@@ -711,7 +711,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
+        <p>© 2026 Services & Trading L.L.C. All rights reserved.</p>
         <p style="margin-top: 8px;">
             <a href="/privacy.html">Privacy Policy</a> ·
             <a href="/terms.html">Terms of Service</a>
