--- a/public/index.html
+++ b/public/index.html
@@ -626,9 +626,23 @@
         }
 
         /* ===== How It Works Section ===== */
+        /* ===== VVVIP 2030 How It Works Section ===== */
         .how-it-works {
-            padding: 120px 24px;
-            background: var(--white);
+            padding: 140px 24px;
+            background: linear-gradient(180deg, #FAFAFA 0%, #FFFFFF 50%, #F5F5F5 100%);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .how-it-works::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -50%;
+            width: 200%;
+            height: 100%;
+            background: radial-gradient(ellipse 50% 80% at 50% -20%, rgba(141, 27, 61, 0.04) 0%, transparent 50%);
+            pointer-events: none;
         }
 
         .section-header {
@@ -639,46 +653,71 @@
 
         .section-badge {
             display: inline-block;
-            padding: 10px 24px;
-            background: var(--qatar-maroon-light);
+            padding: 12px 28px;
+            background: linear-gradient(135deg, var(--qatar-maroon-light) 0%, rgba(141, 27, 61, 0.08) 100%);
             color: var(--qatar-maroon);
             border-radius: 100px;
             font-size: 13px;
-            font-weight: 600;
+            font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
-            margin-bottom: 20px;
+            letter-spacing: 2px;
+            margin-bottom: 24px;
+            border: 1px solid rgba(141, 27, 61, 0.1);
         }
 
         .section-title {
-            font-size: 48px;
+            font-size: clamp(36px, 5vw, 54px);
             font-weight: 800;
             color: var(--black);
             line-height: 1.1;
-            margin-bottom: 16px;
-            letter-spacing: -1px;
+            margin-bottom: 20px;
+            letter-spacing: -1.5px;
         }
 
         .section-subtitle {
             font-size: 18px;
             color: var(--slate);
+            font-weight: 500;
         }
 
         .steps-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 24px;
+            gap: 28px;
+            position: relative;
+        }
+
+        /* Connection line between steps */
+        .steps-grid::before {
+            content: '';
+            position: absolute;
+            top: 72px;
+            left: 12%;
+            right: 12%;
+            height: 3px;
+            background: linear-gradient(90deg,
+                    var(--qatar-maroon) 0%,
+                    var(--gold) 33%,
+                    var(--qatar-maroon) 66%,
+                    var(--gold) 100%);
+            opacity: 0.2;
+            z-index: 0;
+            border-radius: 2px;
         }
 
         .step-card {
-            background: var(--white);
-            border-radius: 24px;
-            padding: 40px 32px;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border-radius: 28px;
+            padding: 44px 32px 40px;
             text-align: center;
-            border: 1px solid var(--silver);
+            border: 1px solid rgba(141, 27, 61, 0.08);
             position: relative;
-            transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+            transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
             cursor: pointer;
+            z-index: 1;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.04);
         }
 
         .step-card::before {
@@ -688,16 +727,27 @@
             left: 0;
             right: 0;
             bottom: 0;
-            border-radius: 24px;
-            background: linear-gradient(135deg, var(--qatar-maroon) 0%, var(--qatar-maroon-dark) 100%);
+            border-radius: 28px;
+            background: linear-gradient(145deg, var(--qatar-maroon) 0%, #4A0F22 100%);
             opacity: 0;
-            transition: opacity 0.4s ease;
+            transition: opacity 0.5s ease;
             z-index: -1;
         }
 
+        .step-card::after {
+            content: '';
+            position: absolute;
+            inset: -2px;
+            border-radius: 30px;
+            background: linear-gradient(145deg, var(--gold), var(--qatar-maroon), var(--gold));
+            opacity: 0;
+            z-index: -2;
+            transition: opacity 0.5s ease;
+        }
+
         .step-card:hover {
-            transform: translateY(-12px);
-            box-shadow: 0 30px 60px rgba(141, 27, 61, 0.2);
+            transform: translateY(-16px) scale(1.02);
+            box-shadow: 0 40px 80px rgba(141, 27, 61, 0.25);
             border-color: transparent;
         }
 
@@ -705,45 +755,76 @@
             opacity: 1;
         }
 
-        .step-card:hover .step-number,
+        .step-card:hover::after {
+            opacity: 0.3;
+        }
+
+        .step-card:hover .step-icon,
         .step-card:hover .step-title,
         .step-card:hover .step-desc {
             color: var(--white);
         }
 
-        .step-card:hover .step-number {
-            background: rgba(255, 255, 255, 0.2);
+        .step-card:hover .step-icon {
+            background: rgba(201, 162, 39, 0.2);
+            border-color: var(--gold);
             color: var(--gold);
+            box-shadow: 0 0 40px rgba(201, 162, 39, 0.4);
+            transform: scale(1.08);
         }
 
-        .step-number {
-            width: 56px;
-            height: 56px;
-            background: var(--qatar-maroon-light);
-            color: var(--qatar-maroon);
-            border-radius: 16px;
+        .step-card:hover .step-number-badge {
+            background: var(--gold);
+            color: var(--black);
+        }
+
+        .step-icon {
+            width: 80px;
+            height: 80px;
+            background: linear-gradient(135deg, rgba(141, 27, 61, 0.08) 0%, rgba(141, 27, 61, 0.04) 100%);
+            border: 2px solid rgba(141, 27, 61, 0.1);
+            border-radius: 24px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 24px;
-            font-weight: 800;
+            font-size: 36px;
             margin: 0 auto 24px;
+            transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+            position: relative;
+        }
+
+        .step-number-badge {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            width: 28px;
+            height: 28px;
+            background: var(--qatar-maroon);
+            color: var(--white);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-weight: 800;
+            border: 3px solid var(--white);
             transition: all 0.3s ease;
         }
 
         .step-title {
             font-size: 20px;
-            font-weight: 700;
+            font-weight: 800;
             color: var(--black);
             margin-bottom: 12px;
-            transition: color 0.3s ease;
+            transition: color 0.4s ease;
+            letter-spacing: -0.5px;
         }
 
         .step-desc {
             color: var(--slate);
             font-size: 15px;
-            line-height: 1.6;
-            transition: color 0.3s ease;
+            line-height: 1.7;
+            transition: color 0.4s ease;
         }
 
         /* ===== Gallery Masonry Section ===== */
@@ -949,34 +1030,90 @@
             flex-wrap: wrap;
         }
 
-        /* ===== Footer ===== */
+        /* ===== VVVIP 2030 Premium Footer ===== */
         .footer {
-            background: var(--black);
+            background: linear-gradient(180deg, #0A0A0A 0%, #000000 100%);
             color: var(--white);
-            padding: 80px 24px 40px;
+            padding: 100px 24px 48px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, var(--gold), transparent);
+        }
+
+        .footer::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(201, 162, 39, 0.05) 0%, transparent 70%);
+            pointer-events: none;
         }
 
         .footer-grid {
             display: grid;
             grid-template-columns: 2fr 1fr 1fr 1fr;
             gap: 60px;
-            margin-bottom: 60px;
+            margin-bottom: 64px;
+            position: relative;
+            z-index: 1;
         }
 
         .footer-brand p {
-            color: var(--slate);
+            color: rgba(255, 255, 255, 0.6);
             font-size: 15px;
-            line-height: 1.7;
-            margin-top: 16px;
+            line-height: 1.8;
+            margin-top: 20px;
+            max-width: 280px;
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 12px;
+            margin-top: 28px;
+        }
+
+        .footer-social a {
+            width: 44px;
+            height: 44px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            color: rgba(255, 255, 255, 0.7);
+            text-decoration: none;
+            font-size: 18px;
+            transition: all 0.3s ease;
+        }
+
+        .footer-social a:hover {
+            background: var(--gold);
+            border-color: var(--gold);
+            color: var(--black);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 24px rgba(201, 162, 39, 0.3);
         }
 
         .footer-title {
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 20px;
-            color: var(--white);
+            letter-spacing: 2px;
+            margin-bottom: 24px;
+            color: var(--gold);
         }
 
         .footer-links {
@@ -984,38 +1121,64 @@
         }
 
         .footer-links li {
-            margin-bottom: 12px;
+            margin-bottom: 14px;
         }
 
         .footer-links a {
-            color: var(--slate);
+            color: rgba(255, 255, 255, 0.6);
             text-decoration: none;
             font-size: 15px;
-            transition: color 0.2s ease;
+            transition: all 0.3s ease;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
         }
 
         .footer-links a:hover {
+            color: var(--white);
+            transform: translateX(4px);
+        }
+
+        .footer-links a:hover::before {
+            content: '→';
+            margin-right: 4px;
             color: var(--gold);
         }
 
         .footer-bottom {
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            padding-top: 32px;
+            border-top: 1px solid rgba(255, 255, 255, 0.08);
+            padding-top: 40px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            gap: 16px;
+            gap: 20px;
+            position: relative;
+            z-index: 1;
         }
 
         .footer-legal {
-            font-size: 14px;
-            color: var(--slate);
+            font-size: 13px;
+            color: rgba(255, 255, 255, 0.4);
+            letter-spacing: 0.5px;
         }
 
         .footer-copyright {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.7);
+            font-size: 13px;
+            color: rgba(255, 255, 255, 0.5);
+        }
+
+        .footer-powered {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.4);
+        }
+
+        .footer-powered span {
+            color: var(--gold);
+            font-weight: 600;
         }
 
         /* ===== Responsive ===== */
@@ -1327,22 +1490,34 @@
             </div>
             <div class="steps-grid">
                 <div class="step-card reveal">
-                    <div class="step-number">1</div>
+                    <div class="step-icon">
+                        📱
+                        <span class="step-number-badge">1</span>
+                    </div>
                     <h3 class="step-title">Request</h3>
                     <p class="step-desc">Describe the part you need. Add photos and your car details for accuracy.</p>
                 </div>
                 <div class="step-card reveal">
-                    <div class="step-number">2</div>
+                    <div class="step-icon">
+                        ⚡
+                        <span class="step-number-badge">2</span>
+                    </div>
                     <h3 class="step-title">Compare Bids</h3>
                     <p class="step-desc">Receive competitive quotes from verified garages within hours.</p>
                 </div>
                 <div class="step-card reveal">
-                    <div class="step-number">3</div>
+                    <div class="step-icon">
+                        🔒
+                        <span class="step-number-badge">3</span>
+                    </div>
                     <h3 class="step-title">Pay Securely</h3>
                     <p class="step-desc">Choose card payment or Cash on Delivery. Your money is protected.</p>
                 </div>
                 <div class="step-card reveal">
-                    <div class="step-number">4</div>
+                    <div class="step-icon">
+                        🚚
+                        <span class="step-number-badge">4</span>
+                    </div>
                     <h3 class="step-title">Receive at Door</h3>
                     <p class="step-desc">Track your order in real-time and receive it at your doorstep.</p>
                 </div>
@@ -1467,7 +1642,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- VVVIP 2030 Premium Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
@@ -1475,10 +1650,16 @@
                     <a href="/" class="nav-logo" style="margin-bottom: 16px;">
                         <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap"
                             style="filter: brightness(0) invert(1);">
-
                     </a>
                     <p>Qatar's premium automotive parts marketplace. Connecting customers with verified garages for
                         quality new, used, and OEM parts.</p>
+                    <div class="footer-social">
+                        <a href="https://instagram.com/qscrap.qa" target="_blank" rel="noopener"
+                            title="Instagram">📷</a>
+                        <a href="https://wa.me/97450267974" target="_blank" rel="noopener" title="WhatsApp">💬</a>
+                        <a href="https://twitter.com/qscrapqa" target="_blank" rel="noopener" title="Twitter/X">✖</a>
+                        <a href="https://facebook.com/qscrapqa" target="_blank" rel="noopener" title="Facebook">📘</a>
+                    </div>
                 </div>
                 <div>
                     <h4 class="footer-title">Company</h4>
@@ -1486,28 +1667,29 @@
                         <li><a href="/about.html">About Us</a></li>
                         <li><a href="/partners.html">For Businesses</a></li>
                         <li><a href="/about.html#contact">Contact</a></li>
+                        <li><a href="#how-it-works">How It Works</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="footer-title">Legal</h4>
                     <ul class="footer-links">
                         <li><a href="/privacy.html">Privacy Policy</a></li>
-                        <li><a href="/privacy.html">Terms of Service</a></li>
-                        <li><a href="/privacy.html">Refund Policy</a></li>
+                        <li><a href="/terms.html">Terms of Service</a></li>
+                        <li><a href="/refund.html">Refund Policy</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="footer-title">Contact</h4>
                     <ul class="footer-links">
-                        <li><a href="mailto:support@qscrap.qa">support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974">+974 5026 7974</a></li>
-                        <li><a href="tel:+97455906912">+974 5590 6912</a></li>
+                        <li><a href="mailto:support@qscrap.qa">📧 support@qscrap.qa</a></li>
+                        <li><a href="tel:+97450267974">📞 +974 5026 7974</a></li>
+                        <li><a href="https://wa.me/97450267974" target="_blank">💬 WhatsApp Support</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p class="footer-legal">QScrap Services & Trading L.L.C | CR: 155892 | P.O. Box 32544, Doha, Qatar</p>
-                <p class="footer-copyright">© 2026 All rights reserved.</p>
+                <p class="footer-copyright">© 2026 QScrap. All rights reserved.</p>
             </div>
         </div>
     </footer>
