feat: Comprehensive SEO & AI Discovery Implementation
Phase 1 - Technical Foundation:
- Added robots.txt (blocking dashboards, defining sitemap)
- Added sitemap.xml (6 public pages with priority/changefreq)
- Enhanced title with Qatar/#1 positioning
- Added Twitter Cards (summary_large_image)
- Enhanced Open Graph with dimensions/locale
- Added hreflang for Arabic preparation
- Added theme-color meta

Phase 2 - Structured Data (5 schemas):
- Organization + LocalBusiness + AutoPartsStore (combined)
- WebSite with SearchAction for Google
- HowTo schema (4 steps for rich snippets)
- FAQPage with 5 key questions
- WebPage with BreadcrumbList

All schemas use @id references for entity linking.
Targeting Google rich results + AI/LLM discovery.

--- a/public/index.html
+++ b/public/index.html
@@ -5,48 +5,261 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <title>QScrap - Qatar's Premium Automotive Parts Marketplace</title>
+    <!-- Primary SEO Meta Tags -->
+    <title>QScrap - Qatar's #1 Automotive Parts Marketplace | New, Used & OEM Parts in Doha</title>
     <meta name="description"
-        content="Find new, used, and genuine OEM automotive parts delivered to your door. Qatar's leading B2B and B2C parts marketplace with quality guarantee and same-day delivery.">
+        content="Find new, used, and genuine OEM automotive parts in Qatar. Get competitive quotes from verified garages, secure payments, and same-day delivery across Doha. Qatar's leading B2B and B2C auto parts marketplace.">
     <meta name="keywords"
-        content="car parts Qatar, auto parts Doha, spare parts Qatar, used car parts, OEM parts Qatar, automotive marketplace">
+        content="car parts Qatar, auto parts Doha, spare parts Qatar, used car parts, OEM parts Qatar, Toyota parts Qatar, automotive marketplace, B2B auto parts, scrap car parts, garage suppliers Qatar">
     <meta name="author" content="QScrap Services & Trading L.L.C">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-    <!-- Open Graph / Social -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.qscrap.qa/">
-    <meta property="og:title" content="QScrap - Qatar's Premium Automotive Parts Marketplace">
-    <meta property="og:description" content="Find new, used, and genuine OEM automotive parts delivered to your door.">
-    <meta property="og:image" content="https://www.qscrap.qa/assets/og-image.jpg">
+    <meta property="og:site_name" content="QScrap">
+    <meta property="og:title" content="QScrap - Qatar's #1 Automotive Parts Marketplace">
+    <meta property="og:description"
+        content="Find new, used, and genuine OEM automotive parts in Qatar. Competitive quotes from verified garages with same-day delivery.">
+    <meta property="og:image" content="https://www.qscrap.qa/assets/images/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="en_QA">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@qscrapqa">
+    <meta name="twitter:title" content="QScrap - Qatar's #1 Automotive Parts Marketplace">
+    <meta name="twitter:description"
+        content="Find new, used, and genuine OEM automotive parts in Qatar. Same-day delivery across Doha.">
+    <meta name="twitter:image" content="https://www.qscrap.qa/assets/images/og-image.jpg">
+
+    <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/">
 
-    <!-- Fonts -->
+    <!-- Favicon & Touch Icons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <meta name="theme-color" content="#8D1B3D">
+
+    <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
-    <!-- Schema.org Structured Data -->
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: Organization + LocalBusiness -->
+    <!-- ============================================ -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "Organization",
+        "@type": ["Organization", "LocalBusiness", "AutoPartsStore"],
+        "@id": "https://www.qscrap.qa/#organization",
         "name": "QScrap",
         "legalName": "QScrap Services & Trading L.L.C",
         "url": "https://www.qscrap.qa",
-        "logo": "https://www.qscrap.qa/assets/logo.png",
-        "description": "Qatar's Premium Automotive Parts Marketplace",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.qscrap.qa/assets/images/qscrap-logo.png",
+            "width": 512,
+            "height": 512
+        },
+        "image": "https://www.qscrap.qa/assets/images/og-image.jpg",
+        "description": "Qatar's premier automotive parts marketplace. Find new, used, and OEM car parts from verified garages with same-day delivery across Doha.",
+        "slogan": "Qatar's Premium Automotive Parts Marketplace",
+        "foundingDate": "2025",
+        "telephone": "+974-5026-7974",
+        "email": "support@qscrap.qa",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "Industrial Area, Street 10",
             "postOfficeBoxNumber": "32544",
             "addressLocality": "Doha",
+            "addressRegion": "Ad Dawhah",
+            "postalCode": "32544",
             "addressCountry": "QA"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 25.2854,
+            "longitude": 51.5310
+        },
+        "areaServed": {
+            "@type": "Country",
+            "name": "Qatar"
+        },
+        "priceRange": "$$",
+        "paymentAccepted": ["Credit Card", "Debit Card", "Cash on Delivery"],
+        "currenciesAccepted": "QAR",
+        "openingHoursSpecification": [
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Sunday"],
+                "opens": "08:00",
+                "closes": "22:00"
+            }
+        ],
+        "sameAs": [
+            "https://instagram.com/qscrap.qa",
+            "https://facebook.com/qscrapqa",
+            "https://twitter.com/qscrapqa",
+            "https://wa.me/97450267974"
+        ],
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+974-5026-7974",
+            "contactType": "customer service",
+            "availableLanguage": ["English", "Arabic"],
+            "areaServed": "QA"
+        }
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: WebSite with SearchAction -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "@id": "https://www.qscrap.qa/#website",
+        "url": "https://www.qscrap.qa",
+        "name": "QScrap",
+        "description": "Qatar's premier automotive parts marketplace",
+        "publisher": {"@id": "https://www.qscrap.qa/#organization"},
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": {
+                "@type": "EntryPoint",
+                "urlTemplate": "https://www.qscrap.qa/search?q={search_term_string}"
+            },
+            "query-input": "required name=search_term_string"
+        },
+        "inLanguage": ["en", "ar"]
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: HowTo (How It Works) -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "HowTo",
+        "name": "How to Find Car Parts on QScrap in Qatar",
+        "description": "A simple 4-step process to find and order automotive parts in Qatar using the QScrap marketplace.",
+        "totalTime": "PT30M",
+        "step": [
+            {
+                "@type": "HowToStep",
+                "position": 1,
+                "name": "Request Your Part",
+                "text": "Download the QScrap app and describe the part you need. Add photos and your car details for accurate matching."
+            },
+            {
+                "@type": "HowToStep",
+                "position": 2,
+                "name": "Compare Bids from Garages",
+                "text": "Receive competitive quotes from verified garages within hours. Compare prices, conditions, and reviews."
+            },
+            {
+                "@type": "HowToStep",
+                "position": 3,
+                "name": "Pay Securely",
+                "text": "Choose between card payment or Cash on Delivery. Your money is protected with our escrow system until delivery."
+            },
+            {
+                "@type": "HowToStep",
+                "position": 4,
+                "name": "Receive at Your Door",
+                "text": "Track your order in real-time. Receive same-day delivery across Doha with our verified drivers."
+            }
+        ]
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: FAQPage -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "How do I find car parts in Qatar?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Download the QScrap app, describe the part you need with photos, and receive competitive quotes from verified garages across Qatar. Compare prices and choose the best offer with same-day delivery."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Does QScrap deliver same-day in Doha?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, QScrap offers same-day delivery across Doha and surrounding areas in Qatar. Orders accepted before 4 PM are typically delivered the same day."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Are parts on QScrap genuine OEM?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "QScrap offers new, used, and genuine OEM parts from verified garages. Each listing clearly indicates the part condition and origin. All parts come with a 7-day return policy."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How do I become a garage partner on QScrap?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Visit https://www.qscrap.qa/partners.html to apply as a garage partner. Complete the registration form with your business details. Once approved, you'll receive access to your dashboard to manage orders."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What payment methods does QScrap accept?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "QScrap accepts credit cards, debit cards, and Cash on Delivery (COD). All online payments are secured with industry-standard encryption and escrow protection."
+                }
+            }
+        ]
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: WebPage -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "@id": "https://www.qscrap.qa/#webpage",
+        "url": "https://www.qscrap.qa/",
+        "name": "QScrap - Qatar's #1 Automotive Parts Marketplace",
+        "description": "Find new, used, and genuine OEM automotive parts in Qatar with same-day delivery.",
+        "isPartOf": {"@id": "https://www.qscrap.qa/#website"},
+        "about": {"@id": "https://www.qscrap.qa/#organization"},
+        "primaryImageOfPage": {
+            "@type": "ImageObject",
+            "url": "https://www.qscrap.qa/assets/images/og-image.jpg"
+        },
+        "breadcrumb": {
+            "@type": "BreadcrumbList",
+            "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://www.qscrap.qa/"
+            }]
         }
     }
     </script>
